Ticket #10542 (closed defect: fixed)

Opened 4 years ago

Last modified 3 years ago

StyledTextCtrl ROUNDBOX Indicator incorrect on wxMac

Reported by: cprecord Owned by: robind
Priority: normal Milestone:
Component: wxStyledText Version: 2.8.x
Keywords: stc indicators Cc:
Blocked By: Patch: no
Blocking:

Description

The wx.STC_INDIC_ROUNDBOX indicator draws a filled box around text. On Windows this indicator works correctly, but on wxMac the color is incorrect and there are some visible artifacts that show up on the text.

Attached is a python script that can be used to see this.

Attachments

indic_test.py download (0.8 KB) - added by cprecord 4 years ago.

Change History

Changed 4 years ago by cprecord

Changed 4 years ago by robind

  • owner set to robind
  • status changed from new to accepted

Changed 3 years ago by RD

  • status changed from accepted to closed
  • resolution set to fixed

(In [63113]) Use GraphicsContext (if available) for drawing in SurfaceImpl::AlphaRectangle. Fixes #10542.

Changed 3 years ago by RD

(In [63114]) Use GraphicsContext (if available) for drawing in SurfaceImpl::AlphaRectangle. Fixes #10542.

Changed 3 years ago by RD

(In [63115]) Use GraphicsContext (if available) for drawing in SurfaceImpl::AlphaRectangle. Fixes #10542.

Note: See TracTickets for help on using tickets.